--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.19.1",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "bullmq": "^5.66.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -42,6 +43,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/axios": "^0.9.36",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
