feat: Initialize multi-service application with backend, frontend, and CV analysis functionality.

--- a/apps/ai-engine/Dockerfile
+++ b/apps/ai-engine/Dockerfile
@@ -1,10 +1,8 @@
-# ai-engine/Dockerfile
-FROM python:3.9-slim
+FROM python:3.11-slim AS builder
 
 WORKDIR /app
 
-# 1. Install System Dependencies 
-# Required for potential PDF/Word processing libraries (libpoppler, libxml2)
+# Install build dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpoppler-cpp-dev \
@@ -12,18 +10,56 @@ RUN apt-get update && apt-get install -y \
     python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# 2. Install Python Dependencies
+# Create virtual environment
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
-# 3. CRITICAL: Re-structure for Import Compatibility
-# We copy the local 'src' folder to '/app/app' inside the container.
-# This makes Python see 'app' as a package, allowing "from app.schemas import ..."
+# -----------------------------------------------------------------------------
+# Stage 2: Production Runner (minimal)
+# -----------------------------------------------------------------------------
+FROM python:3.11-slim AS runner
+
+WORKDIR /app
+
+# Install runtime dependencies only
+RUN apt-get update && apt-get install -y \
+    libpoppler-cpp-dev \
+    wget \
+    && rm -rf /var/lib/apt/lists/*
+
+# Security: Create non-root user
+RUN addgroup --system --gid 1001 python && \
+    adduser --system --uid 1001 --gid 1001 python
+
+# Copy virtual environment from builder
+COPY --from=builder /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Set production environment
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+# Copy application code
 COPY src/ ./app/
-
-# 4. Copy the entrypoint
 COPY main.py .
 
-# 5. Expose & Run
+# Change ownership to non-root user
+RUN chown -R python:python /app
+
+# Switch to non-root user
+USER python
+
+# Expose port
 EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:8000/health || exit 1
+
+# Start the server
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
