--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,32 +1,72 @@
-# apps/backend/Dockerfile
+FROM node:18-alpine AS deps
 
-# 1. Base Image
-FROM node:18-alpine
-
-# 2. Set Working Directory
 WORKDIR /app
 
-# 3. Install Dependencies
-# Copy package files first to leverage Docker cache
+# Copy package files for dependency installation
 COPY package*.json ./
 COPY prisma ./prisma/
 
-# Install dependencies (including Prisma)
-RUN npm install
+# Install all dependencies (including devDependencies for build)
+RUN npm ci
 
-# 4. Generate Prisma Client
-# This creates the Type definitions for your DB Schema
+# Generate Prisma client
 RUN npx prisma generate
 
-# 5. Copy Source Code
+# -----------------------------------------------------------------------------
+# Stage 2: Builder
+# -----------------------------------------------------------------------------
+FROM node:18-alpine AS builder
+
+WORKDIR /app
+
+# Copy dependencies from previous stage
+COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /app/prisma ./prisma
+
+# Copy source code
 COPY . .
 
-# 6. Build the Application
+# Build the application
 RUN npm run build
 
-# 7. Expose Port
+# -----------------------------------------------------------------------------
+# Stage 3: Production Runner (minimal image)
+# -----------------------------------------------------------------------------
+FROM node:18-alpine AS runner
+
+# Security: Run as non-root user
+RUN addgroup --system --gid 1001 nestjs
+RUN adduser --system --uid 1001 nestjs
+
+WORKDIR /app
+
+# Set production environment
+ENV NODE_ENV=production
+
+# Copy only production dependencies
+COPY package*.json ./
+RUN npm ci --only=production
+
+# Copy Prisma schema and generated client
+COPY --from=deps /app/prisma ./prisma
+COPY --from=deps /app/node_modules/.prisma ./node_modules/.prisma
+COPY --from=deps /app/node_modules/@prisma ./node_modules/@prisma
+
+# Copy built application
+COPY --from=builder /app/dist ./dist
+
+# Change ownership to non-root user
+RUN chown -R nestjs:nestjs /app
+
+# Switch to non-root user
+USER nestjs
+
+# Expose port
 EXPOSE 3001
 
-# 8. Start Command
-# Using "migrate deploy" ensures DB is in sync before starting
-CMD ["sh", "-c", "npx prisma migrate deploy && npm run start:prod"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:3001/health || exit 1
+
+# Start command with database migration
+CMD ["sh", "-c", "npx prisma migrate deploy && node dist/main"]
