--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,10 +14,15 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@studio-freight/lenis": "^1.0.29",
     "@tanstack/react-query": "^5.90.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "gsap": "^3.12.4",
     "html2pdf.js": "^0.13.0",
     "immer": "^11.1.3",
     "lucide-react": "^0.562.0",
@@ -26,8 +31,10 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-to-print": "^3.2.0",
+    "simplex-noise": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "three": "^0.160.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
